# CompGraph

CG.Lab1/: CMakeLists.txt  MySuper3DApp.cpp
CG.Lab2/: CMakeLists.txt  WinMain.cpp
CG.Lab2/Framework/: Application.cpp  Application.h  Graphics.cpp  Graphics.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
